--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -69,7 +69,8 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
-                    android:paddingTop="16dp" />
+                    android:paddingTop="16dp"
+                    android:text="@string/release_date_label" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
