--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,13 +11,18 @@
         <item name="android:typeface">sans</item>
     </style>
 
+    <style name="MovieReleaseDateLabelFont" parent="@android:style/TextAppearance.Large">
+        <item name="android:textColor">@android:color/tertiary_text_light</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
     <style name="MovieReleaseDateFont" parent="@android:style/TextAppearance.Large">
         <item name="android:textColor">@android:color/secondary_text_light</item>
         <item name="android:typeface">sans</item>
     </style>
 
     <style name="MovieRatingFont" parent="@android:style/TextAppearance.Large">
-        <item name="android:textColor">@android:color/tertiary_text_light</item>
+        <item name="android:textColor">@android:color/primary_text_light</item>
         <item name="android:typeface">sans</item>
     </style>
 
@@ -27,6 +32,16 @@
     </style>
 
     <style name="MovieSynopsisFont" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textColor">@android:color/primary_text_light</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="MovieReviewsLabelFont" parent="@android:style/TextAppearance.Large">
+        <item name="android:textColor">@android:color/tertiary_text_light</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="MovieReviewsFont" parent="@android:style/TextAppearance.Medium">
         <item name="android:textColor">@android:color/primary_text_light</item>
         <item name="android:typeface">sans</item>
     </style>
