--- a/app/src/main/res/layout/list_header_videos.xml
+++ b/app/src/main/res/layout/list_header_videos.xml
@@ -8,12 +8,11 @@
 
     <TextView
         android:id="@+id/movie_videos_label"
+        style="@style/ListLabelFont"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="5dp"
-        android:text="@string/videos_label"
-        android:textSize="@dimen/abc_text_size_medium_material"
-        android:textStyle="bold" />
+        android:paddingBottom="8dp"
+        android:text="@string/videos_label" />
 
     <View
         android:layout_width="match_parent"
