--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/list_item_review_textview"
-    style="@style/MovieReviewsFont"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/list_item_review"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:minHeight="?android:attr/listPreferredItemHeight"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:text="test" />
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/comment_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
+        android:src="@drawable/ic_mode_comment" />
+
+    <TextView
+        android:id="@+id/review_author"
+        style="@style/MovieDetailsLabelFont"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/comment_icon"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp"
+        android:text="test" />
+
+    <TextView
+        android:id="@+id/review_content"
+        style="@style/MovieReviewsFont"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/review_author"
+        android:layout_toRightOf="@id/comment_icon"
+        android:gravity="center_vertical"
+        android:padding="16dp"
+        android:text="test" />
+</RelativeLayout>
