--- a/app/src/main/res/layout/list_header_reviews_label.xml
+++ b/app/src/main/res/layout/list_header_reviews_label.xml
@@ -4,6 +4,7 @@
     android:id="@+id/movie_reviews_label_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:divider="?android:attr/dividerHorizontal"
     android:orientation="vertical"
     android:padding="@dimen/activity_vertical_margin">
 
@@ -15,9 +16,12 @@
         android:paddingBottom="8dp"
         android:text="@string/reviews_label" />
 
-    <View
+    <TextView
+        android:id="@+id/no_reviews_available_warning"
+        style="@style/BodyTextFont"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
+        android:layout_height="wrap_content"
+        android:paddingBottom="16dp"
+        android:text="@string/no_reviews_available" />
 </LinearLayout>
 
