--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -27,7 +27,7 @@
 
     <TextView
         android:id="@+id/review_content"
-        style="@style/MovieReviewsFont"
+        style="@style/BodyTextFont"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/review_author"
