--- a/app/src/main/res/menu/fragment_detail.xml
+++ b/app/src/main/res/menu/fragment_detail.xml
@@ -7,7 +7,13 @@
     <item
         android:id="@+id/action_favorite_movie"
         android:checkable="true"
-        android:icon="@drawable/ic_favorite_outline_36dp"
+        android:icon="@drawable/ic_favorite_outline"
         android:title="@string/favorite_button"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_share"
+        android:title="@string/action_share"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
         app:showAsAction="always" />
 </menu>
