Add ability to sort by favorites Sort by popularity vs rating changed to use results of different API requests

--- a/app/src/main/res/menu/fragment_main.xml
+++ b/app/src/main/res/menu/fragment_main.xml
@@ -19,6 +19,9 @@
                 <item
                     android:id="@+id/action_sort_by_rating"
                     android:title="@string/sort_by_label_rating" />
+                <item
+                    android:id="@+id/action_sort_by_favorites"
+                    android:title="@string/sort_by_label_favorites" />
             </group>
         </menu>
     </item>
